test/cases/compile_errors/export_with_empty_name_string.zig
pub export fn entry() void {}
comptime {
    @export(entry, .{ .name = "" });
}

// error
// backend=llvm
// target=native
//
// :3:24: error: exported symbol name cannot be empty
